認証用のmodelを追加

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "next": "15.2.0",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
