--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.1",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
