--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "next-auth": "^5.0.0-beta.25",
