--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@storybook/blocks": "^8.6.4",
     "@storybook/experimental-addon-test": "^8.6.4",
     "@storybook/experimental-nextjs-vite": "^8.6.4",
+    "@storybook/nextjs": "^8.6.4",
     "@storybook/react": "^8.6.4",
     "@storybook/test": "^8.6.4",
     "@tailwindcss/postcss": "^4",
@@ -59,6 +60,7 @@
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.0.8",
     "@vitest/coverage-v8": "^3.0.8",
+    "autoprefixer": "^10.4.20",
     "playwright": "^1.51.0",
     "prisma": "^6.4.1",
     "storybook": "^8.6.4",
