--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
