--- a/package.json
+++ b/package.json
@@ -1,76 +1,76 @@
 {
-  "name": "simple-dairy",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.8.0",
-    "@conform-to/react": "^1.2.2",
-    "@conform-to/zod": "^1.2.2",
-    "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.4.1",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-scroll-area": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@tanstack/react-query": "^5.67.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "lottie-web": "^5.12.2",
-    "lucide-react": "^0.477.0",
-    "next": "15.2.0",
-    "next-auth": "^5.0.0-beta.25",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-colorful": "^5.6.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
-    "react-error-boundary": "^5.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-markdown": "^10.0.1",
-    "server-only": "^0.0.1",
-    "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.5",
-    "@storybook/addon-essentials": "^8.6.4",
-    "@storybook/addon-onboarding": "^8.6.4",
-    "@storybook/blocks": "^8.6.4",
-    "@storybook/experimental-addon-test": "^8.6.4",
-    "@storybook/experimental-nextjs-vite": "^8.6.4",
-    "@storybook/nextjs": "^8.6.4",
-    "@storybook/react": "^8.6.4",
-    "@storybook/test": "^8.6.4",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@vitest/browser": "^3.0.8",
-    "@vitest/coverage-v8": "^3.0.8",
-    "autoprefixer": "^10.4.20",
-    "playwright": "^1.51.0",
-    "prisma": "^6.4.1",
-    "storybook": "^8.6.4",
-    "tailwindcss": "^4",
-    "typescript": "^5",
-    "vitest": "^3.0.8"
-  }
+	"name": "simple-dairy",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
+	},
+	"dependencies": {
+		"@auth/prisma-adapter": "^2.8.0",
+		"@conform-to/react": "^1.2.2",
+		"@conform-to/zod": "^1.2.2",
+		"@hookform/resolvers": "^4.1.3",
+		"@prisma/client": "^6.4.1",
+		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-scroll-area": "^1.2.3",
+		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.1.3",
+		"@radix-ui/react-toggle": "^1.1.2",
+		"@radix-ui/react-tooltip": "^1.1.8",
+		"@tanstack/react-query": "^5.67.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
+		"lottie-web": "^5.12.2",
+		"lucide-react": "^0.477.0",
+		"next": "15.2.0",
+		"next-auth": "^5.0.0-beta.25",
+		"next-themes": "^0.4.4",
+		"react": "18.2.0",
+		"react-colorful": "^5.6.1",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "18.2.0",
+		"react-error-boundary": "^5.0.0",
+		"react-hook-form": "^7.54.2",
+		"react-markdown": "^10.0.1",
+		"server-only": "^0.0.1",
+		"sonner": "^2.0.1",
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.2"
+	},
+	"devDependencies": {
+		"@chromatic-com/storybook": "^3.2.5",
+		"@storybook/addon-essentials": "^8.6.4",
+		"@storybook/addon-onboarding": "^8.6.4",
+		"@storybook/blocks": "^8.6.4",
+		"@storybook/experimental-addon-test": "^8.6.4",
+		"@storybook/experimental-nextjs-vite": "^8.6.4",
+		"@storybook/nextjs": "^8.6.4",
+		"@storybook/react": "^8.6.4",
+		"@storybook/test": "^8.6.4",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@vitest/browser": "^3.0.8",
+		"@vitest/coverage-v8": "^3.0.8",
+		"autoprefixer": "^10.4.20",
+		"playwright": "^1.51.0",
+		"prisma": "^6.4.1",
+		"storybook": "^8.6.4",
+		"tailwindcss": "^4",
+		"typescript": "^5",
+		"vitest": "^3.0.8"
+	}
 }
