--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"build-storybook": "storybook build",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.8.0",
